tests/errors/std-string-append-different-zone.ari
fn main() -> i64 {
  var source = zone::create(8);
  var target = zone::create(8);
  var text = std::string::new(ref mut source, 1);
  text.append_i64_in(ref mut target, 12);
  zone::destroy(target);
  zone::destroy(source);
  return 0;
}
